lab1/GrammarTree.output
Grammar

    0 $accept: Program $end

    1 Program: ClassDefs

    2 ClassDefs: ClassDef
    3          | ClassDefs ClassDef

    4 VariableDef: Variable SPSEMICOLON
    5            | Variable CommaIdentifiers SPSEMICOLON
    6            | error SPSEMICOLON

    7 CommaIdentifiers: SPCOMMA IDENTIFIER
    8                 | CommaIdentifiers SPCOMMA IDENTIFIER

    9 Variable: Type IDENTIFIER

   10 Type: TYPEINTEGER
   11     | TYPEFLOAT
   12     | TYPEBOOL
   13     | TYPESTRING
   14     | TYPEVOID
   15     | KEYCLASS IDENTIFIER
   16     | Type OPLEFTBRACKET OPRIGHTBRACKET

   17 Variables: Variable
   18          | Variables SPCOMMA Variable

   19 Formals: %empty
   20        | Variables

   21 FunctionDef: Type IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock
   22            | KEYSTATIC Type IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

   23 ClassDef: KEYCLASS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE
   24         | KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE
   25         | error SPRIGHTBRACE

   26 Fields: %empty
   27       | Field Fields

   28 Field: VariableDef
   29      | FunctionDef

   30 StmtBlock: SPLEFTBRACE Stmts SPRIGHTBRACE
   31          | error SPRIGHTBRACE

   32 Stmts: %empty
   33      | Stmt Stmts

   34 Stmt: VariableDef
   35     | SimpleStmt SPSEMICOLON
   36     | IfStmt
   37     | WhileStmt
   38     | ForStmt
   39     | BreakStmt SPSEMICOLON
   40     | ReturnStmt SPSEMICOLON
   41     | PrintStmt SPSEMICOLON
   42     | StmtBlock

   43 SimpleStmt: %empty
   44           | LValue OPASSIGN Expr
   45           | Call

   46 LValue: IDENTIFIER
   47       | Expr SPDOT IDENTIFIER
   48       | Expr OPLEFTBRACKET Expr OPRIGHTBRACKET

   49 Call: IDENTIFIER OPLEFTPRNT Actuals OPRIGHTPRNT
   50     | Expr SPDOT IDENTIFIER OPLEFTPRNT Actuals OPRIGHTPRNT

   51 Actuals: %empty
   52        | Exprs

   53 Exprs: Expr
   54      | Exprs SPCOMMA Expr

   55 ForStmt: KEYFOR OPLEFTPRNT SimpleStmt SPSEMICOLON BoolExpr SPSEMICOLON SimpleStmt OPRIGHTPRNT Stmt

   56 WhileStmt: KEYWHILE OPLEFTPRNT BoolExpr OPRIGHTPRNT Stmt

   57 IfStmt: KEYIF OPLEFTPRNT BoolExpr OPRIGHTPRNT Stmt
   58       | KEYIF OPLEFTPRNT BoolExpr OPRIGHTPRNT Stmt KEYELSE Stmt

   59 ReturnStmt: KEYRETURN
   60           | KEYRETURN Expr

   61 BreakStmt: KEYBREAK

   62 PrintStmt: KEYPRINT OPLEFTPRNT Exprs OPRIGHTPRNT

   63 BoolExpr: Expr

   64 Expr: Constant
   65     | LValue
   66     | KEYTHIS
   67     | Call
   68     | OPLEFTPRNT Expr OPRIGHTPRNT
   69     | Expr OPPLUS Expr
   70     | Expr OPMINUS Expr
   71     | Expr OPMULTIPLY Expr
   72     | Expr OPDIVIDE Expr
   73     | OPMINUS Expr
   74     | Expr OPLIGHT Expr
   75     | Expr OPLIGHTEQ Expr
   76     | Expr OPGREAT Expr
   77     | Expr OPGREATEQ Expr
   78     | Expr OPEQUAL Expr
   79     | Expr OPNOTEQUAL Expr
   80     | Expr OPAND Expr
   81     | Expr OPOR Expr
   82     | OPNOT Expr
   83     | KEYREADINTEGER OPLEFTPRNT OPRIGHTPRNT
   84     | KEYREADLINE OPLEFTPRNT OPRIGHTPRNT
   85     | KEYNEW IDENTIFIER OPLEFTPRNT OPRIGHTPRNT
   86     | KEYNEW Type OPLEFTBRACKET Expr OPRIGHTBRACKET
   87     | KEYINSTANCEOF OPLEFTPRNT Expr SPCOMMA IDENTIFIER OPRIGHTPRNT
   88     | OPLEFTPRNT KEYCLASS IDENTIFIER OPRIGHTPRNT Expr

   89 Constant: CONSTANTINTD
   90         | CONSTANTINTH
   91         | CONSTANTFLOAT
   92         | CONSTANTFLOATSC
   93         | CONSTANTBOOL
   94         | CONSTANTSTRING
   95         | CONSTANTNULL


Terminals, with rules where they appear

$end (0) 0
error (256) 6 25 31
SPSEMICOLON (258) 4 5 6 35 39 40 41 55
SPCOMMA (259) 7 8 18 54 87
SPDOT (260) 47 50
SPLEFTBRACE (261) 23 24 30
SPRIGHTBRACE (262) 23 24 25 30 31
OPLEFTPRNT (263) 21 22 49 50 55 56 57 58 62 68 83 84 85 87 88
OPRIGHTPRNT (264) 21 22 49 50 55 56 57 58 62 68 83 84 85 87 88
OPLEFTBRACKET (265) 16 48 86
OPRIGHTBRACKET (266) 16 48 86
OPPLUS (267) 69
OPMINUS (268) 70 73
OPMULTIPLY (269) 71
OPDIVIDE (270) 72
OPASSIGN (271) 44
OPAND (272) 80
OPOR (273) 81
OPNOT (274) 82
OPEQUAL (275) 78
OPNOTEQUAL (276) 79
OPGREAT (277) 76
OPLIGHT (278) 74
OPGREATEQ (279) 77
OPLIGHTEQ (280) 75
TYPEVOID (281) 14
TYPEINTEGER (282) 10
TYPEFLOAT (283) 11
TYPEBOOL (284) 12
TYPESTRING (285) 13
KEYCLASS (286) 15 23 24 88
KEYNEW (287) 85 86
KEYEXTENDS (288) 24
KEYTHIS (289) 66
KEYINSTANCEOF (290) 87
KEYIF (291) 57 58
KEYELSE (292) 58
KEYFOR (293) 55
KEYWHILE (294) 56
KEYBREAK (295) 61
KEYRETURN (296) 59 60
KEYSTATIC (297) 22
KEYPRINT (298) 62
KEYREADINTEGER (299) 83
KEYREADLINE (300) 84
CONSTANTNULL (301) 95
CONSTANTBOOL (302) 93
CONSTANTINTD (303) 89
CONSTANTINTH (304) 90
CONSTANTFLOAT (305) 91
CONSTANTFLOATSC (306) 92
CONSTANTSTRING (307) 94
IDENTIFIER (308) 7 8 9 15 21 22 23 24 46 47 49 50 85 87 88
LOWER_THAN_ELSE (309)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
Program (56)
    on left: 1, on right: 0
ClassDefs (57)
    on left: 2 3, on right: 1 3
VariableDef (58)
    on left: 4 5 6, on right: 28 34
CommaIdentifiers (59)
    on left: 7 8, on right: 5 8
Variable (60)
    on left: 9, on right: 4 5 17 18
Type (61)
    on left: 10 11 12 13 14 15 16, on right: 9 16 21 22 86
Variables (62)
    on left: 17 18, on right: 18 20
Formals (63)
    on left: 19 20, on right: 21 22
FunctionDef (64)
    on left: 21 22, on right: 29
ClassDef (65)
    on left: 23 24 25, on right: 2 3
Fields (66)
    on left: 26 27, on right: 23 24 27
Field (67)
    on left: 28 29, on right: 27
StmtBlock (68)
    on left: 30 31, on right: 21 22 42
Stmts (69)
    on left: 32 33, on right: 30 33
Stmt (70)
    on left: 34 35 36 37 38 39 40 41 42, on right: 33 55 56 57 58
SimpleStmt (71)
    on left: 43 44 45, on right: 35 55
LValue (72)
    on left: 46 47 48, on right: 44 65
Call (73)
    on left: 49 50, on right: 45 67
Actuals (74)
    on left: 51 52, on right: 49 50
Exprs (75)
    on left: 53 54, on right: 52 54 62
ForStmt (76)
    on left: 55, on right: 38
WhileStmt (77)
    on left: 56, on right: 37
IfStmt (78)
    on left: 57 58, on right: 36
ReturnStmt (79)
    on left: 59 60, on right: 40
BreakStmt (80)
    on left: 61, on right: 39
PrintStmt (81)
    on left: 62, on right: 41
BoolExpr (82)
    on left: 63, on right: 55 56 57 58
Expr (83)
    on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83 84 85 86 87 88, on right: 44 47 48 50 53 54 60 63 68 69 70
    71 72 73 74 75 76 77 78 79 80 81 82 86 87 88
Constant (84)
    on left: 89 90 91 92 93 94 95, on right: 64


State 0

    0 $accept: . Program $end

    error     shift, and go to state 1
    KEYCLASS  shift, and go to state 2

    Program    go to state 3
    ClassDefs  go to state 4
    ClassDef   go to state 5


State 1

   25 ClassDef: error . SPRIGHTBRACE

    SPRIGHTBRACE  shift, and go to state 6


State 2

   23 ClassDef: KEYCLASS . IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE
   24         | KEYCLASS . IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE

    IDENTIFIER  shift, and go to state 7


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 8


State 4

    1 Program: ClassDefs .
    3 ClassDefs: ClassDefs . ClassDef

    error     shift, and go to state 1
    KEYCLASS  shift, and go to state 2

    $end  reduce using rule 1 (Program)

    ClassDef  go to state 9


State 5

    2 ClassDefs: ClassDef .

    $default  reduce using rule 2 (ClassDefs)


State 6

   25 ClassDef: error SPRIGHTBRACE .

    $default  reduce using rule 25 (ClassDef)


State 7

   23 ClassDef: KEYCLASS IDENTIFIER . SPLEFTBRACE Fields SPRIGHTBRACE
   24         | KEYCLASS IDENTIFIER . KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE

    SPLEFTBRACE  shift, and go to state 10
    KEYEXTENDS   shift, and go to state 11


State 8

    0 $accept: Program $end .

    $default  accept


State 9

    3 ClassDefs: ClassDefs ClassDef .

    $default  reduce using rule 3 (ClassDefs)


State 10

   23 ClassDef: KEYCLASS IDENTIFIER SPLEFTBRACE . Fields SPRIGHTBRACE

    error        shift, and go to state 12
    TYPEVOID     shift, and go to state 13
    TYPEINTEGER  shift, and go to state 14
    TYPEFLOAT    shift, and go to state 15
    TYPEBOOL     shift, and go to state 16
    TYPESTRING   shift, and go to state 17
    KEYCLASS     shift, and go to state 18
    KEYSTATIC    shift, and go to state 19

    SPRIGHTBRACE  reduce using rule 26 (Fields)

    VariableDef  go to state 20
    Variable     go to state 21
    Type         go to state 22
    FunctionDef  go to state 23
    Fields       go to state 24
    Field        go to state 25


State 11

   24 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS . IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE

    IDENTIFIER  shift, and go to state 26


State 12

    6 VariableDef: error . SPSEMICOLON

    SPSEMICOLON  shift, and go to state 27


State 13

   14 Type: TYPEVOID .

    $default  reduce using rule 14 (Type)


State 14

   10 Type: TYPEINTEGER .

    $default  reduce using rule 10 (Type)


State 15

   11 Type: TYPEFLOAT .

    $default  reduce using rule 11 (Type)


State 16

   12 Type: TYPEBOOL .

    $default  reduce using rule 12 (Type)


State 17

   13 Type: TYPESTRING .

    $default  reduce using rule 13 (Type)


State 18

   15 Type: KEYCLASS . IDENTIFIER

    IDENTIFIER  shift, and go to state 28


State 19

   22 FunctionDef: KEYSTATIC . Type IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    TYPEVOID     shift, and go to state 13
    TYPEINTEGER  shift, and go to state 14
    TYPEFLOAT    shift, and go to state 15
    TYPEBOOL     shift, and go to state 16
    TYPESTRING   shift, and go to state 17
    KEYCLASS     shift, and go to state 18

    Type  go to state 29


State 20

   28 Field: VariableDef .

    $default  reduce using rule 28 (Field)


State 21

    4 VariableDef: Variable . SPSEMICOLON
    5            | Variable . CommaIdentifiers SPSEMICOLON

    SPSEMICOLON  shift, and go to state 30
    SPCOMMA      shift, and go to state 31

    CommaIdentifiers  go to state 32


State 22

    9 Variable: Type . IDENTIFIER
   16 Type: Type . OPLEFTBRACKET OPRIGHTBRACKET
   21 FunctionDef: Type . IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    OPLEFTBRACKET  shift, and go to state 33
    IDENTIFIER     shift, and go to state 34


State 23

   29 Field: FunctionDef .

    $default  reduce using rule 29 (Field)


State 24

   23 ClassDef: KEYCLASS IDENTIFIER SPLEFTBRACE Fields . SPRIGHTBRACE

    SPRIGHTBRACE  shift, and go to state 35


State 25

   27 Fields: Field . Fields

    error        shift, and go to state 12
    TYPEVOID     shift, and go to state 13
    TYPEINTEGER  shift, and go to state 14
    TYPEFLOAT    shift, and go to state 15
    TYPEBOOL     shift, and go to state 16
    TYPESTRING   shift, and go to state 17
    KEYCLASS     shift, and go to state 18
    KEYSTATIC    shift, and go to state 19

    SPRIGHTBRACE  reduce using rule 26 (Fields)

    VariableDef  go to state 20
    Variable     go to state 21
    Type         go to state 22
    FunctionDef  go to state 23
    Fields       go to state 36
    Field        go to state 25


State 26

   24 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER . SPLEFTBRACE Fields SPRIGHTBRACE

    SPLEFTBRACE  shift, and go to state 37


State 27

    6 VariableDef: error SPSEMICOLON .

    $default  reduce using rule 6 (VariableDef)


State 28

   15 Type: KEYCLASS IDENTIFIER .

    $default  reduce using rule 15 (Type)


State 29

   16 Type: Type . OPLEFTBRACKET OPRIGHTBRACKET
   22 FunctionDef: KEYSTATIC Type . IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    OPLEFTBRACKET  shift, and go to state 33
    IDENTIFIER     shift, and go to state 38


State 30

    4 VariableDef: Variable SPSEMICOLON .

    $default  reduce using rule 4 (VariableDef)


State 31

    7 CommaIdentifiers: SPCOMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 39


State 32

    5 VariableDef: Variable CommaIdentifiers . SPSEMICOLON
    8 CommaIdentifiers: CommaIdentifiers . SPCOMMA IDENTIFIER

    SPSEMICOLON  shift, and go to state 40
    SPCOMMA      shift, and go to state 41


State 33

   16 Type: Type OPLEFTBRACKET . OPRIGHTBRACKET

    OPRIGHTBRACKET  shift, and go to state 42


State 34

    9 Variable: Type IDENTIFIER .
   21 FunctionDef: Type IDENTIFIER . OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    OPLEFTPRNT  shift, and go to state 43

    $default  reduce using rule 9 (Variable)


State 35

   23 ClassDef: KEYCLASS IDENTIFIER SPLEFTBRACE Fields SPRIGHTBRACE .

    $default  reduce using rule 23 (ClassDef)


State 36

   27 Fields: Field Fields .

    $default  reduce using rule 27 (Fields)


State 37

   24 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE . Fields SPRIGHTBRACE

    error        shift, and go to state 12
    TYPEVOID     shift, and go to state 13
    TYPEINTEGER  shift, and go to state 14
    TYPEFLOAT    shift, and go to state 15
    TYPEBOOL     shift, and go to state 16
    TYPESTRING   shift, and go to state 17
    KEYCLASS     shift, and go to state 18
    KEYSTATIC    shift, and go to state 19

    SPRIGHTBRACE  reduce using rule 26 (Fields)

    VariableDef  go to state 20
    Variable     go to state 21
    Type         go to state 22
    FunctionDef  go to state 23
    Fields       go to state 44
    Field        go to state 25


State 38

   22 FunctionDef: KEYSTATIC Type IDENTIFIER . OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    OPLEFTPRNT  shift, and go to state 45


State 39

    7 CommaIdentifiers: SPCOMMA IDENTIFIER .

    $default  reduce using rule 7 (CommaIdentifiers)


State 40

    5 VariableDef: Variable CommaIdentifiers SPSEMICOLON .

    $default  reduce using rule 5 (VariableDef)


State 41

    8 CommaIdentifiers: CommaIdentifiers SPCOMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 46


State 42

   16 Type: Type OPLEFTBRACKET OPRIGHTBRACKET .

    $default  reduce using rule 16 (Type)


State 43

   21 FunctionDef: Type IDENTIFIER OPLEFTPRNT . Formals OPRIGHTPRNT StmtBlock

    TYPEVOID     shift, and go to state 13
    TYPEINTEGER  shift, and go to state 14
    TYPEFLOAT    shift, and go to state 15
    TYPEBOOL     shift, and go to state 16
    TYPESTRING   shift, and go to state 17
    KEYCLASS     shift, and go to state 18

    $default  reduce using rule 19 (Formals)

    Variable   go to state 47
    Type       go to state 48
    Variables  go to state 49
    Formals    go to state 50


State 44

   24 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE Fields . SPRIGHTBRACE

    SPRIGHTBRACE  shift, and go to state 51


State 45

   22 FunctionDef: KEYSTATIC Type IDENTIFIER OPLEFTPRNT . Formals OPRIGHTPRNT StmtBlock

    TYPEVOID     shift, and go to state 13
    TYPEINTEGER  shift, and go to state 14
    TYPEFLOAT    shift, and go to state 15
    TYPEBOOL     shift, and go to state 16
    TYPESTRING   shift, and go to state 17
    KEYCLASS     shift, and go to state 18

    $default  reduce using rule 19 (Formals)

    Variable   go to state 47
    Type       go to state 48
    Variables  go to state 49
    Formals    go to state 52


State 46

    8 CommaIdentifiers: CommaIdentifiers SPCOMMA IDENTIFIER .

    $default  reduce using rule 8 (CommaIdentifiers)


State 47

   17 Variables: Variable .

    $default  reduce using rule 17 (Variables)


State 48

    9 Variable: Type . IDENTIFIER
   16 Type: Type . OPLEFTBRACKET OPRIGHTBRACKET

    OPLEFTBRACKET  shift, and go to state 33
    IDENTIFIER     shift, and go to state 53

